--- a/static/style.css
+++ b/static/style.css
@@ -56,7 +56,7 @@ textarea {
     position: relative;
 }
 .incoming {
-    background: #8F8BE8;
+    background: #8be2e8;
     color: #fff;  
 }
 .outgoing {
