--- a/static/style.css
+++ b/static/style.css
@@ -56,7 +56,7 @@ textarea {
     position: relative;
 }
 .incoming {
-    background: #8be2e8;
+    background: #4ebb4d;
     color: #fff;  
 }
 .outgoing {
